## automake.am
##
## Scripts Directory Makefile.am for Rivendell
##
## (C) Copyright 2002-2006 Fred Gleason <fredg@paravelsystems.com>
##
##      $Id: Makefile.am,v 1.13.2.1 2008/11/20 16:44:19 fredg Exp $
##
##   This program is free software; you can redistribute it and/or modify
##   it under the terms of the GNU General Public License version 2 as
##   published by the Free Software Foundation.
##
##   This program is distributed in the hope that it will be useful,
##   but WITHOUT ANY WARRANTY; without even the implied warranty of
##   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
##   GNU General Public License for more details.
##
##   You should have received a copy of the GNU General Public
##   License along with this program; if not, write to the Free Software
##   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
##
##
## Use automake to process this into a Makefile.in

bin_SCRIPTS = rd_rip_cd rd_import_file rd_audio_sync rd_config\
              rd_export_file crc-unity4k.sh rd_backup\
              rd_encode rd_import_encode rd_import_copy

EXTRA_DIST = rd_rip_cd rd_import_file kill_rd rd_create_db start_rd\
             rd_audio_sync rd_config rd_export_file crc-unity4k.sh\
             rd_backup start_traverso.sh\
             rd_encode rd_import_encode rd_import_copy

CLEANFILES = *~
MAINTAINERCLEANFILES = *~ Makefile.in
