## automake.am
##
## docs/tables/automake.am for Rivendell
##
## (C) Copyright 2002-2006 Fred Gleason <fredg@salemradiolabs.com>
##
##      $Id: Makefile.am,v 1.14.2.2 2008/11/29 15:48:08 fredg Exp $
##      $Date: 2008/11/29 15:48:08 $
##
##   This program is free software; you can redistribute it and/or modify
##   it under the terms of the GNU General Public License version 2 as
##   published by the Free Software Foundation.
##
##   This program is distributed in the hope that it will be useful,
##   but WITHOUT ANY WARRANTY; without even the implied warranty of
##   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
##   GNU General Public License for more details.
##
##   You should have received a copy of the GNU General Public
##   License along with this program; if not, write to the Free Software
##   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
##
##
## Use automake to process this into a Makefile.in

EXTRA_DIST = audio_perms.txt\
             audio_ports.txt\
             cart.txt\
             clipboard.txt\
             clock_perms.txt\
             cuts.txt\
             decks.txt\
             dropboxes.txt\
             dropbox_paths.txt\
             encoder_bitrates.txt\
             encoder_channels.txt\
             encoder_samplerates.txt\
             encoders.txt\
             extended_panel_names.txt\
             feed_perms.txt\
             gpis.txt\
             gpos.txt\
             groups.txt\
             log_format.txt\
             logs.txt\
             nownext_plugins.txt\
             panels.txt\
             panel_names.txt\
             rd_airplay.txt\
             rd_catch.txt\
             rd_library.txt\
             rd_logedit.txt\
             recordings.txt\
             services.txt\
             sources.txt\
             stations.txt\
             svc_rec_format.txt\
             triggers.txt\
             ttys.txt\
             user_perms.txt\
             users.txt\
             version.txt\
             vguest_resources.txt\
             web_connections.txt

CLEANFILES = *~
MAINTAINERCLEANFILES = *~ Makefile.in
